# rdaensemble

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
docs/: packaging.md  scores.markdown
output/: NC20C_RMfRSP_1000_log.txt  NC20C_RMfRSP_1000_plans.json  NC20C_RMfRST_1000_notable_maps.json  NC20C_RMfRST_1000_notables_maps.json  NC20C_RMfRST_1000_plans.json  NC20C_RMfRST_1000_scores.csv  NC20C_RMfRST_1000_scores_metadata.json  NC20C_RMfRST_100_log.txt  NC20C_RMfRST_100_notable_maps.json  NC20C_RMfRST_100_scores.csv  NC20C_RMfRST_100_scores_metadata.json  NC_2020_random_maps_log.txt  NC_2020_random_maps_plans.json  NC_2020_random_maps_scores.csv  log.txt
random_maps/: AL20C_random_plan.csv  AL20L_random_plan.csv  AL20U_random_plan.csv  AZ20C_random_plan.csv  AZ20U_random_plan.csv  CA20C_random_plan.csv  CA20L_random_plan.csv  CA20U_random_plan.csv  CO20C_random_plan.csv  CO20L_random_plan.csv  CO20U_random_plan.csv  FL20C_random_plan.csv  FL20L_random_plan.csv  FL20U_random_plan.csv  GA20C_random_plan.csv  GA20L_random_plan.csv  GA20U_random_plan.csv  IL20C_random_plan.csv  IL20L_random_plan.csv  IL20U_random_plan.csv  IN20C_random_plan.csv  IN20L_random_plan.csv  IN20U_random_plan.csv  MA20C_random_plan.csv  MA20L_random_plan.csv  MA20U_random_plan.csv  MD20C_random_plan.csv  MD20U_random_plan.csv  MI20C_random_plan.csv  MI20L_random_plan.csv  MI20U_random_plan.csv  MN20C_random_plan.csv  MN20L_random_plan.csv  MN20U_random_plan.csv  MO20C_random_plan.csv  MO20L_random_plan.csv  MO20U_random_plan.csv  NC20U_random_plan.csv  NJ20C_random_plan.csv  (+30 more)
(+96 files in other folders)
