[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rdaensemble"
version = "1.8.1"
authors = [
  { name="Alec Ramsay", email="a73cram5ay@gmail.com" },
]
description = "Redistricting ensembles"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["license", "dependencies"]

[project.urls]
"Homepage" = "https://github.com/rdatools/rdaensemble"
"Bug Tracker" = "https://github.com/rdatools/rdabase/issues"